<feat> : <인기 조종사 controller 구현> [지라 이슈 링크]
openapi.yaml version 0.0.4 진행
인기 조종사 반환하는 api 반환
