# src/main/java/droni/backend/api/expert/dto/DroniPopularExpert.java
@@ -1,13 +1,0 @@
-package droni.backend.api.expert.dto;
-
-import lombok.Builder;
-import lombok.Data;
-
-@Data
-@Builder
-public class DroniPopularExpert {
-    private int expertId;
-    private double score;
-    private String profileImage;
-
-}
