# src/main/java/droni/backend/api/expert/service/ExpertService.java
@@ -1,6 +1,6 @@
 package droni.backend.api.expert.service;
 
-import droni.backend.api.expert.dto.DroniPopularExpert;
+import backend.generated_model.PopularExpert;
 import droni.backend.api.expert.repository.ExpertRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -11,7 +11,7 @@ import java.util.List;
 @RequiredArgsConstructor
 public class ExpertService {
     private final ExpertRepository expertRepository;
-    public List<DroniPopularExpert> getPopularExpert() {
+    public List<PopularExpert> getPopularExpert() {
         return expertRepository.getPopularExpertList();
     }
 }
