# src/main/resources/openapi.yaml
@@ -12,7 +12,7 @@ info:
   license:
     name: Apache License Version 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0
-  version: '0.0.3'
+  version: '0.0.4'
 tags:
   - name: home
     description: home API
@@ -21,6 +21,8 @@ tags:
   - name: auth
     description: auth API
   - name: article
+  - name: expert
+    description: drone pilot API
 security:
   - bearer-key: []
 paths:
@@ -93,9 +95,20 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ArticleSummaryResponse'
-
-
-
+  /expert/popular:
+    get:
+      tags:
+        - expert
+      summary: 메인화면 인기 조종사 api
+      responses:
+        200:
+          description: request success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PopularExpert'
   /sucess-test:
     get:
       tags:
@@ -184,6 +197,16 @@ components:
         articleImageUri:
           type: string
         articleSubject:
+          type: string
+    PopularExpert:
+      type: object
+      properties:
+        expertId:
+          type: integer
+        score:
+          type: number
+          format: float
+        profileImage:
           type: string
 
 
